# NN-MoonDataSet

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
moonDatasetNeuralNetwork/: Activation.cpp  CMakeLists.txt  Forward.cpp  main.cpp
moonDatasetNeuralNetwork/Headers/: Activation.hpp  Forward.hpp  Global.hpp
moonDatasetNeuralNetwork/Resources/Data/: moonDataset.csv
